# trident

./: .gitignore  CMakeLists.txt  CMakePresets.json  justfile
.github/ISSUE_TEMPLATE/: implementation.md
cmake/: arm-none-eabi-gcc.cmake
embedded/: .clangd
embedded/app/: CMakeLists.txt
embedded/app/front/: CMakeLists.txt  app_front.cpp
embedded/app/rear/: CMakeLists.txt  app_rear.cpp
embedded/boards/compute_module/cubemx/: .mxproject  CMakeLists.txt  cubemx.ioc
embedded/boards/compute_module/cubemx/Core/Src/: main.c
embedded/boards/compute_module/cubemx/cmake/stm32cubemx/: CMakeLists.txt
embedded/platform/: CMakeLists.txt
embedded/platform/host/: CMakeLists.txt  main_host.cpp
embedded/platform/stm32/: CMakeLists.txt  main_stm32.cpp
tools/generators/: merge_compile_commands.py  pyproject.toml
